--- a/styles.css
+++ b/styles.css
@@ -83,7 +83,7 @@ color: white;
 {
     background-color:#c4c4c4;
     width:22%;
-    height:20px;
+    height:4.5%;
     margin-left:10px;
     border-radius:2px;
 }
