--- a/styles.css
+++ b/styles.css
@@ -83,8 +83,8 @@ color: white;
 {
     background-color:#c4c4c4;
     width:22%;
-    height:4.5%;
-    margin-left:10px;
+    height:20px;
+    
     border-radius:2px;
 }
 #heading2
