--- a/styles.css
+++ b/styles.css
@@ -84,7 +84,7 @@ color: white;
     background-color:#c4c4c4;
     width:22%;
     height:20px;
-    
+    margin-left:10px;
     border-radius:2px;
 }
 #heading2
